Add remaining project files and final report

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,21 @@
 **
 !system_template_de1_soc/
+!*.bdf
+!*.sdc
 !*.v
+!*.vhd
+!*.sopcinfo
+!*.tcl
+!*.qip
+!*.qpf
+!*.qsf
 !*.qsys
 !system_template_de1_soc/software/
-!system_template_de1_soc/software/*
+!system_template_de1_soc/software/**
 system_template_de1_soc/software/*_bsp
 !system_template_de1_soc/software/*/*.c
 !DSD_coursework_DE1-SoC.pdf
+!Report_3_Group_7.pdf
 !README.md
 !Python/
 !*.py
